k8/frontend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
     name: frontend-pod
     namespace: chat-app
     labels:
       app: frontend
    spec:
      containers: 
      - name: frontend
        image: sujalll11/chat-app-frontend:latest
        ports:
        - containerPort: 80
