k8/service-backend.yml
kind: Service 
apiVersion: v1
metadata:
  name: backend
  namespace: chat-app
spec:
   selector:
      app: backend
   ports:
      - port: 5001
        targetPort: 5001
