k8/service-frontend.yml
kind: Service 
apiVersion: v1
metadata:
  name: frontend
  namespace: chat-app
spec:
   selector:
      app: frontend
   ports:
      - port: 80
        targetPort: 80
