k8/service-mongo.yml
kind: Service 
apiVersion: v1
metadata:
  name: mongodb
  namespace: chat-app
spec:
   selector:
      app: mongo
   ports:
      - port: 27017
        targetPort: 27017
